# monitoring-feedback-layer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: p6-monitoring-scheduled.yml
src/monitoring/: cli.py  config.py
src/monitoring/contracts/: adapters.py  dataset.py  serving.py  training.py
src/monitoring/dagster/: __init__.py  assets.py  config.py  defs.py  jobs.py  schedules.py  serving_assets.py
src/monitoring/freshness/: compute.py
src/monitoring/lineage/: emitter.py  schemas.py
src/monitoring/metrics/: registry.py  server.py
src/monitoring/serving/: health.py  ingest.py
src/monitoring/validation/: checks.py
tests/: test_adapters.py  test_cli_metrics.py  test_contracts.py  test_dagster_defs.py  test_freshness.py  test_lineage.py  test_metrics.py  test_serving.py  test_validation.py
tests/fixtures/: dataset_metadata.json  dataset_metadata_missing_built_at.json  training_metadata.json
tests/fixtures/p4_bundle/: metadata.json  metrics.json  model_uri.txt
