[project]
name = "monitoring-feedback-layer"
version = "0.1.0"
description = "P6 — Monitoring and feedback layer for the urban mobility ML platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "prometheus-client>=0.21,<1",
    "typer>=0.12,<1",
    "dagster>=1.9,<2",
    "dagster-webserver>=1.9,<2",
]

[project.scripts]
monitoring = "monitoring.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monitoring"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]
